# rust-embed-play

./: README.md  init.sh
app02/: Cargo.toml  openocd.gdb
app03/: Cargo.toml  openocd.gdb
app03/src/: main.rs
demo/: Cargo.toml  README.md  itm.txt  openocd.gdb
experiment/: notes.txt
experiment/app01/: Cargo.toml
experiment/app02/: Cargo.toml
experiment/app02/src/: main.rs
stm32f3-reference/STM32F3DISCOVERY_demo/: readme.txt
