[package]
authors = ["Thorben Jändling <thorbenj@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "app03"
version = "0.1.0"

[dependencies]
# Only set the critical section feature, if you are using a bare-metal platform
# without any RTOS
# See https://github.com/rust-embedded/critical-section for further details.
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-semihosting = "0.3.3"

# Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
panic-semihosting = "0.6.0"
#panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.3" }

# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }

cortex-m-rtic = { version = "1.1.4" }
systick-monotonic = "1.0.1"

rtt-target = { version = "0.5.0" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "app03"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
